--- a/Projetos pessoais/002/proj-tabela.html
+++ b/Projetos pessoais/002/proj-tabela.html
@@ -27,7 +27,7 @@
         <main> <!--Conteúdo-->
             <h1 class="text">Veja o índice de desenvolvimento humano de outros países</h1>
             <article>
-                <h2 id="ah2">Mas o que é o IDH? &#x1F914;</h2>
+                <h2 class="ah2">Mas o que é o IDH? &#x1F914;</h2>
                 <p>O Índice de Desenvolvimento Humano (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de zero a um e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" class="link" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o Brasil pela primeira vez alcançou o nível 0,80, passando a integrar o grupo de países com IDH elevado. Países com IDH até 0,499 são considerados de desenvolvimento humano baixo, e os com índices entre 0,50 e 0,799 são considerados de desenvolvimento humano médio. <br>
         
                 <div class="dado">
@@ -150,11 +150,30 @@
                     </tbody>
                 </table>
             </div>
+
+            <p id="ptab2">Em relação a 2017, o Brasil apresentou leve crescimento de 0,001 no seu IDH, passando de 0,760 para 0,761. Na América do Sul, o Brasil é o 4º país com mais alto IDH.</p>
+
+            <article>
+                <h2 class="ah2">Os top 10 IDH do Brasil são:</h2>
+                <ul>
+                    <li>Distrito Federal - <abbr title="Considerado muito alto">0,850</abbr></li>
+                    <li>São Paulo - <abbr title="Considerado muito alto">0,826</abbr></li>
+                    <li>Santa Catarina - <abbr title="Considerado muito alto">0,808</abbr></li>
+                    <li>Rio de Janeiro - <abbr title="Considerado alto">0,796</abbr></li>
+                    <li>Paraná - <abbr title="Considerado alto">0,792</abbr></li>
+                    <li>Rio Grande do Sul - <abbr title="Considerado alto">0,787</abbr></li>
+                    <li>Minas Gerais - <abbr title="Considerado alto">0,787</abbr></li>
+                    <li>Mato Grosso - <abbr title="Considerado alto">0,774</abbr></li>
+                    <li>Espírito Santo - <abbr title=" Considerado alto">0,772</abbr></li>
+                    <li>Goiás - <abbr title="Considerado alto">0,769</abbr></li>
+                </ul>
+            </article>
+            <p>No levantamento realizado pela ONU, a cidade de São Caetano do Sul, localizada em São Paulo, ficou com a primeira colocação, com o Índice de Desenvolvimento Humano (IDH) de 0,862.  Seguida de Águas de São Pedro (SP), 0,854, e Florianópolis, com o IDH na casa dos 0,847.</p>
         </main>
     </div>
 
     <footer> <!--Rodapé-->
-        <p>Criado por <a href="#">Gabriel Trovalim</a>.</p>
+        <p>Criado por <a href="https://www.linkedin.com/in/gabriel-trovalim-992871255/" target="_blank" rel="external">Gabriel Trovalim</a>.</p>
     </footer>
 
 </body>
