--- a/Projetos pessoais/002/proj-tabela.html
+++ b/Projetos pessoais/002/proj-tabela.html
@@ -28,7 +28,7 @@
             <h1 class="text">Veja o índice de desenvolvimento humano de outros países</h1>
             <article>
                 <h2 class="ah2">Mas o que é o IDH? &#x1F914;</h2>
-                <p>O Índice de Desenvolvimento Humano (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de zero a um e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" class="link" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o Brasil pela primeira vez alcançou o nível 0,80, passando a integrar o grupo de países com IDH elevado. Países com IDH até 0,499 são considerados de desenvolvimento humano baixo, e os com índices entre 0,50 e 0,799 são considerados de desenvolvimento humano médio. <br>
+                <p>O <strong>Índice de Desenvolvimento Humano</strong> (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de <strong>zero</strong> a <strong>um</strong> e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" class="link" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o <strong>Brasil</strong> 🇧🇷 pela primeira vez alcançou o nível <strong>0,80</strong>, passando a integrar o grupo de países com IDH elevado. Países com IDH até <strong>0,499</strong> são considerados de desenvolvimento humano <strong>baixo</strong>, e os com índices entre <strong>0,50</strong> e <strong>0,799</strong> são considerados de desenvolvimento humano <strong>médio</strong>. <br>
         
                 <div class="dado">
                     Fonte: <a href="https://www.ipea.gov.br/desafios/index.php?option=com_content&id=2144:catid=28" class="link" target="_blank" rel="external">Ipea</a>(Site). <br>
@@ -151,7 +151,7 @@
                 </table>
             </div>
 
-            <p id="ptab2">Em relação a 2017, o Brasil apresentou leve crescimento de 0,001 no seu IDH, passando de 0,760 para 0,761. Na América do Sul, o Brasil é o 4º país com mais alto IDH.</p>
+            <p id="ptab2">Em relação a 2017, o <strong>Brasil</strong> apresentou leve crescimento de 0,001 no seu IDH, passando de <strong>0,760</strong> para <strong>0,761</strong>. Na América do Sul, o Brasil é o 4º país com mais alto IDH.</p>
 
             <article>
                 <h2 class="ah2">Os top 10 IDH do Brasil são:</h2>
@@ -168,7 +168,7 @@
                     <li>Goiás - <abbr title="Considerado alto">0,769</abbr></li>
                 </ul>
             </article>
-            <p>No levantamento realizado pela ONU, a cidade de São Caetano do Sul, localizada em São Paulo, ficou com a primeira colocação, com o Índice de Desenvolvimento Humano (IDH) de 0,862.  Seguida de Águas de São Pedro (SP), 0,854, e Florianópolis, com o IDH na casa dos 0,847.</p>
+            <p>No levantamento realizado pela <strong>ONU</strong>, a cidade de <strong>São Caetano do Sul</strong>, localizada em <strong>São Paulo</strong>, ficou com a <strong>primeira</strong> colocação, com o Índice de Desenvolvimento Humano (IDH) de <strong>0,862</strong>.  Seguida de <strong>Águas de São Pedro</strong> (SP), <strong>0,854</strong>, e <strong>Florianópolis</strong>, com o IDH na casa dos <strong>0,847</strong>.</p>
         </main>
     </div>
 
