--- a/Exercicios/Ex021/iframe003.html
+++ b/Exercicios/Ex021/iframe003.html
@@ -21,7 +21,7 @@
 <body>
     <h1>Faça uma escolha</h1>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quibusdam corrupti tempore incidunt delectus molestiae qui, aperiam voluptatem officia quasi possimus eius mollitia commodi reprehenderit molestias error quia dolorum saepe? Lorem ipsum, dolor sit amet consectetur adipisicing elit. A nam dolor voluptate quisquam error, iste repellendus ea quo at cupiditate. Est quia necessitatibus doloremque debitis saepe, natus porro itaque soluta.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quibusdam corrupti tempore incidunt delectus molestiae qui, aperiam voluptatem officia quasi possimus eius mollitia commodi reprehenderit molestias error quia doloroom saepe? Lorem ipsum, dolor sit amet consectetur adipisicing elit. A nam dolor voluptate quisquam error, iste repellendus ea quo at cupiditate. Est quia necessitatibus doloremque debitis saepe, natus porro itaque soluta.</p>
 
     <ul>
         <li><a href="pag001.html" target="frame">Primeira página</a></li>
@@ -31,7 +31,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatem rem quibusdam veritatis, nostrum nulla, ab ad hic accusantium atque ullam corporis dolorum consequuntur maiores natus quia pariatur aspernatur est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid laudantium quas doloribus deserunt corporis delectus hic consectetur illo obcaecati! Animi dolorem voluptatum doloribus, alias tenetur quis at est. Eius, tempore?</p>
 
-    <iframe id="tela" name="frame" src="" frameborder="0">
+    <iframe id="tela" name="frame" srcdoc="<h1>Esperando</h1>" frameborder="0">
         <p>Infelizmente o seu navegador não suporta essa funcionalidade.</p>
     </iframe>
 
