--- a/Exercicios/Ex021 - iframe/iframe001.html
+++ b/Exercicios/Ex021 - iframe/iframe001.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Estudos de iframe</h1>
     
-    <p>Podemos acessar o <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe> por aqui</p>
+    <p>Podemos acessar o <iframe src="https://www.cursoemvideo.com/" frameborder="0" scrolling="no"></iframe> por aqui</p>
 </body>
 </html>
