--- a/Exercicios/Ex021 - iframe/iframe002.html
+++ b/Exercicios/Ex021 - iframe/iframe002.html
@@ -10,7 +10,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe corporis explicabo odit nesciunt voluptas, exercitationem ratione repellendus quos laborum atque, aspernatur eaque consectetur laudantium ad repellat vitae blanditiis suscipit inventore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto at odit temporibus voluptas consectetur placeat laudantium officiis ad ipsam. Nesciunt consectetur eveniet magnam similique iure dolor officia. Impedit, itaque quisquam.</p>
 
-    <iframe src="pagina001.html" frameborder="0"></iframe>
+    <iframe src="pag001.html" frameborder="0"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde tempore magnam explicabo ipsam a molestias error earum consectetur. Eveniet quos corrupti possimus accusamus, ducimus cupiditate voluptatem laudantium? Beatae, quae dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quo, at laudantium praesentium delectus inventore autem natus architecto necessitatibus perferendis fuga nemo sint porro excepturi hic temporibus nesciunt modi sapiente?</p>
 </body>
