--- a/Exercicios/Ex021 - iframe/pag005.html
+++ b/Exercicios/Ex021 - iframe/pag005.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <style>
+        body{
+            background-color: peachpuff;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        a{
+            font-weight: bold;
+            font-size: 1.5em;
+            text-decoration: none;
+            color: black;
+            padding: 10px;
+            background-color: lightgray;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <a href="#" onclick="clicou()">Clique em mim</a>
