--- a/Projetos pessoais/003/index.html
+++ b/Projetos pessoais/003/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá, mundo</h1>
+    <main>
+        <article id="telefone">
+
+        </article>
+        <article id="redes">
+
+        </article>
+    </main>
 </body>
 </html>
