--- a/Projetos pessoais/003/index.html
+++ b/Projetos pessoais/003/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang=pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes sociais</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
+    <title>Redes sociais</title>
 </head>
-<body>
-    <main>
-        <article id="telefone">
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
-        </article>
-        <article id="redes">
 
-        </article>
+<body>
+    <main> <!--Conteúdo principal-->
+        <section id="telefone"> <!--Contém a estrutura do celular-->
+            
+        </section>
+
+        <section id="redes"> <!--Contém os botões das redes-->
+
+        </section>
     </main>
 </body>
 </html>
