--- a/Projetos pessoais/003/index.html
+++ b/Projetos pessoais/003/index.html
@@ -12,7 +12,7 @@
 <body>
     <main> <!--Conteúdo principal-->
         <section id="telefone"> <!--Contém a estrutura do celular-->
-            
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe> <!--Imagem da tela-->
         </section>
 
         <section id="redes"> <!--Contém os botões das redes-->
