--- a/Projetos pessoais/003/index.html
+++ b/Projetos pessoais/003/index.html
@@ -12,11 +12,18 @@
 <body>
     <main> <!--Conteúdo principal-->
         <section id="telefone"> <!--Contém a estrutura do celular-->
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe> <!--Imagem da tela-->
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">
+                Seu navegador não é compativel com essa função.
+            </iframe> <!--Imagem da tela-->
         </section>
 
-        <section id="redes"> <!--Contém os botões das redes-->
-
+        <section id="redes"> <!--Contém os botões das redes / menu lateral-->
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
