--- a/Projetos pessoais/003/index.html
+++ b/Projetos pessoais/003/index.html
@@ -18,8 +18,8 @@
         </section>
 
         <section id="redes"> <!--Contém os botões das redes / menu lateral-->
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="yotube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
