código em desenvolvimento

--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -5,14 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas redes</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
-<body>
-    <main>
-        <header id="cabeca">
-            <section id="foto">
+<header>
+    <section id="foto">
+        <img src="imagens/Eu1.jpg" alt="Gabriel">
+    </section>
+    <p>Gabriel Trovalim</p>
+    <p class="pequeno">Programador Jr.</p>
+</header>
+<main> <!--Conteúdo principal-->
+    <section id="caixa1">
+        <img src="imagens/Eu1.jpg" alt="teste">
+        <a href="#">
+            <article id="cont1">
                 
-            </section>
-        </header>
-    </main>
+            </article>
+        </a>
+    </section>
+    <section id="caixa2">
+        <img src="imagens/Eu1.jpg" alt="teste">
+        <a href="#">
+            <article id="cont2">
+
+            </article>
+        </a>
+    </section>
+    
+</main>
 </body>
 </html>
