--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -16,28 +16,28 @@
 </header>
 <main> <!--Conteúdo principal-->
     <section id="caixa1">
-        <img src="imagens/Eu1.jpg" alt="teste">
+        <img src="imagens/linkedin.png" alt="teste">
         <a href="#">
             <article id="cont1">
-                
+                <p>Linkedin</p>
             </article>
         </a>
     </section>
 
     <section id="caixa2">
-        <img src="imagens/Eu1.jpg" alt="teste">
+        <img src="imagens/logo-github.jpg" alt="teste">
         <a href="#">
             <article id="cont2">
-
+                <p>GitHub</p>
             </article>
         </a>
     </section>
     
     <section id="caixa3">
-        <img src="imagens/Eu1.jpg" alt="teste">
+        <img src="imagens/logo-instagram.jpg" alt="teste">
         <a href="#">
             <article id="cont3">
-
+                <p>Instagram</p>
             </article>
         </a>
     </section>
