--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -7,46 +7,17 @@
     <title>Minhas redes</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
-<header>
-    <section id="foto">
+<body>
+    <header>
         <img src="imagens/Eu1.jpg" alt="Gabriel">
-    </section>
-    <p>Gabriel Trovalim</p>
-    <p class="pequeno">Programador Jr.</p>
-</header>
-<main> <!--Conteúdo principal-->
-    <section id="caixa1">
-        <img src="imagens/linkedin.png" alt="teste">
-        <a href="#">
-            <article id="cont1">
-                <p>Linkedin</p>
-            </article>
+        <p>Gabriel Trovalim</p>
+        <p>Programador Jr.</p>
+    </header>
+    <main>
+        <a href="https://www.linkedin.com/in/gabriel-trovalim-992871255/" target="_blank" rel="external" class="caixa">
+            <img src="imagens/logo-instagram.jpg" alt="insta">
+            Instagram
         </a>
-    </section>
-
-    <section id="caixa2">
-        <img src="imagens/logo-github.jpg" alt="teste">
-        <a href="#">
-            <article id="cont2">
-                <p>GitHub</p>
-            </article>
-        </a>
-    </section>
-    
-    <section id="caixa3">
-        <img src="imagens/logo-instagram.jpg" alt="teste">
-        <a href="#">
-            <article id="cont3">
-                <p>Instagram</p>
-            </article>
-        </a>
-    </section>
-
-    <section id="monitor">
-        <iframe src="home.html" frameborder="0" name="tela" id="tela">
-            Seu navegador não é compativel com esse recurso.
-        </iframe>
-    </section>
-</main>
+    </main>
 </body>
 </html>
