--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -10,13 +10,18 @@
 <body>
     <header>
         <img src="imagens/Eu1.jpg" alt="Gabriel">
-        <p>Gabriel Trovalim</p>
+        <p id="nome">Gabriel Trovalim</p>
         <p>Programador Jr.</p>
     </header>
     <main>
-        <a href="https://www.linkedin.com/in/gabriel-trovalim-992871255/" target="_blank" rel="external" class="caixa">
-            <img src="imagens/logo-instagram.jpg" alt="insta">
+        <a href="https://www.instagram.com/zuckwrmantt/" target="_blank" rel="external" class="caixa">
+            <img src="imagens/logo-instagram.jpg" alt="instagram">
             Instagram
+        </a>
+
+        <a href="#" target="_blank" rel="external" id="git">
+            <img src="imagens/logo-github.jpg" alt="github">
+            GitHub
         </a>
     </main>
 </body>
