--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -19,9 +19,14 @@
             Instagram
         </a>
 
-        <a href="#" target="_blank" rel="external" id="git">
+        <a href="https://github.com/GabrielTrovalim" target="_blank" rel="external" id="git">
             <img src="imagens/logo-github.jpg" alt="github">
             GitHub
+        </a>
+
+        <a href="https://www.linkedin.com/in/gabriel-trovalim-992871255/" target="_blank" rel="external" id="linke">
+            <img src="imagens/linkedin.png" alt="linkedin">
+            Linkedin
         </a>
     </main>
 </body>
