--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -11,10 +11,10 @@
     <header>
         <img src="imagens/Eu1.jpg" alt="Gabriel">
         <p id="nome">Gabriel Trovalim</p>
-        <p>Programador Jr.</p>
+        <p id="sub">Programador Jr.</p>
     </header>
     <main>
-        <a href="https://www.instagram.com/zuckwrmantt/" target="_blank" rel="external" class="caixa">
+        <a href="https://www.instagram.com/zuckwrmantt/" target="_blank" rel="external" id="insta">
             <img src="imagens/logo-instagram.jpg" alt="instagram">
             Instagram
         </a>
