--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -8,26 +8,31 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <header>
+    <header> <!--Cabeçalho do site-->
         <img src="imagens/Eu1.jpg" alt="Gabriel">
         <p id="nome">Gabriel Trovalim</p>
         <p id="sub">Programador Jr.</p>
     </header>
-    <main>
+
+    <main><!--Corpo do site-->
         <a href="https://www.instagram.com/zuckwrmantt/" target="_blank" rel="external" id="insta">
             <img src="imagens/logo-instagram.jpg" alt="instagram">
             Instagram
-        </a>
+        </a> <!--Botão para o instagram-->
 
         <a href="https://github.com/GabrielTrovalim" target="_blank" rel="external" id="git">
             <img src="imagens/logo-github.jpg" alt="github">
             GitHub
-        </a>
+        </a> <!--Botão para o GitHub-->
 
         <a href="https://www.linkedin.com/in/gabriel-trovalim-992871255/" target="_blank" rel="external" id="linke">
             <img src="imagens/linkedin.png" alt="linkedin">
             Linkedin
-        </a>
+        </a> <!--Botão para o linkedin-->
     </main>
+
+    <footer><!--Rodapé do site-->
+        <p>Criado e desenvolvido por <a href="https://github.com/GabrielTrovalim" target="_blank" rel="external"><strong>Gabriel Trovalim</strong></a>.</p>
+    </footer>
 </body>
 </html>
