--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -29,6 +29,14 @@
             <img src="imagens/linkedin.png" alt="linkedin">
             Linkedin
         </a> <!--Botão para o linkedin-->
+
+        <section id="frame">
+            <div id="container">
+                <iframe src="home.html" frameborder="0" id="tela" name="tela">
+                    Seu navegador não é compatível com esse recurso...
+                </iframe>
+            </div>
+        </section>
     </main>
 
     <footer><!--Rodapé do site-->
