--- a/Projetos pessoais/004/home.html
+++ b/Projetos pessoais/004/home.html
@@ -7,8 +7,7 @@
     <title>home</title>
     <style>
         body{
-            background: peachpuff url('imagens/tela-azul.png')no-repeat top center scroll;
-            background-size: 335px 200px;
+            background: red url('https://media2.giphy.com/media/xUPGcfEAZhlZXCZrbi/giphy.gif') no-repeat top center scroll;
         }
     </style>
 </head>
