--- a/Projetos pessoais/004/index.html
+++ b/Projetos pessoais/004/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minhas redes</title>
+    <title>Minhas redes &#x1F920;</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="imagens/web.ico" type="image/x-icon">
 </head>
 <body>
     <header> <!--Cabeçalho do site-->
@@ -31,11 +32,9 @@
         </a> <!--Botão para o linkedin-->
 
         <section id="frame">
-            <div id="container">
-                <iframe src="home.html" frameborder="0" id="tela" name="tela">
+            <iframe src="home.html" frameborder="0" id="tela" name="tela">
                     Seu navegador não é compatível com esse recurso...
-                </iframe>
-            </div>
+            </iframe>
         </section>
     </main>
 
