valores em radio

--- a/Exercicios/Ex022 - formulários/form005.html
+++ b/Exercicios/Ex022 - formulários/form005.html
@@ -17,15 +17,16 @@
     <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
             <legend>Sexo</legend>
-            <input type="radio" name="sexo" id="isexm">
+            <input type="radio" name="sexo" id="isexm" value="M">
             <label for="isexm">Masculino</label>
             <br>
-            <input type="radio" name="sexo" id="isexf">
+            <input type="radio" name="sexo" id="isexf" value="F">
             <label for="isexf">Feminino</label>
         </fieldset>
 
         <fieldset>
             <legend>Esportes favoritos</legend>
+
             <input type="checkbox" name="esbasca" id="iesbasca"> <label for="iesbasca">Basquete</label> <br>
             <input type="checkbox" name="esfut" id="iesfut"> <label for="iesfut">Futebol</label> <br>
             <input type="checkbox" name="esnata" id="iesnata"> <label for="iesnata">Natação</label> <br>
