--- a/Exercicios/Ex022 - formulários/form09.html
+++ b/Exercicios/Ex022 - formulários/form09.html
@@ -7,8 +7,10 @@
     <title>Formulário</title>
 </head>
 <body>
-    <form action="cadastro.php" method="post">
+    <form action="cadastro.php" method="get">
         <p>
+            <label for="inum">Número: </label>
+            <input type="range" name="num" id="inum" min="0" max="10" value="5" oninput="ival.innerHTML = Number(inum.value)">
             
         </p>
         <p>
