Exemplo de media query

--- a/Exercicios/Ex023 - Media Query/mq001/index.html
+++ b/Exercicios/Ex023 - Media Query/mq001/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Notícias</h1>
 
-        <menu>
+        <menu> <!--Menu em formato de lista-->
             <ul>
                 <li>Esportes</li>
                 <li>Política</li>
