Estrutura base e estilo base

--- a/Exercicios/Ex023 - Media Query/mq005/index.html
+++ b/Exercicios/Ex023 - Media Query/mq005/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu responsivo</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <header> <!--Cabeçalho-->
+        <h1>Meu site</h1>
+        <menu> <!--Menu-->
+            <ul>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
+            </ul>
+        </menu>
+    </header>
+
+    <main> <!--Conteúdo principal-->
+        <article>
+            <h2>Testando media queries</h2>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio inventore quia esse accusamus laboriosam debitis, nihil maiores numquam voluptates laudantium hic ex quam vero eaque tenetur consequuntur animi ad ullam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum autem optio omnis, magni a possimus cum molestiae, voluptatibus minima nobis aperiam at libero harum, vero repudiandae suscipit! Autem, quos esse?</p>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius molestias quam repellendus odit porro dolores expedita eligendi, officia quas recusandae molestiae earum voluptatem repudiandae eaque consequatur tempora enim fugiat quis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae optio quos voluptas adipisci, quam deserunt repudiandae veniam? Repellat magni, quasi hic, optio quos eaque, dolorem reprehenderit nesciunt dolore nam adipisci.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium cumque esse alias modi laborum ipsum maiores excepturi! Ex ipsum suscipit quo dolores obcaecati aliquam eius quae dignissimos quidem illum?</p>
+
+        </article>
+    </main>
 </body>
 </html>
