--- a/Exercicios/Ex023 - Media Query/mq005/index.html
+++ b/Exercicios/Ex023 - Media Query/mq005/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu responsivo</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--Ícone do google icons / menu compacto-->
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header> <!--Cabeçalho-->
         <h1>Meu site</h1>
+        <span id="burguer" class="material-icons">menu</span> <!--Objeto do menu-->
         <menu> <!--Menu-->
             <ul>
                 <li><a href="#">Opção 1</a></li>
