--- a/Exercicios/Ex023 - Media Query/mq005/index.html
+++ b/Exercicios/Ex023 - Media Query/mq005/index.html
@@ -11,7 +11,7 @@
 <body>
     <header> <!--Cabeçalho-->
         <h1>Meu site</h1>
-        <span id="burguer" class="material-icons">menu</span> <!--Objeto do menu-->
+        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span> <!--Objeto do menu-->
         <menu> <!--Menu-->
             <ul>
                 <li><a href="#">Opção 1</a></li>
@@ -35,5 +35,10 @@
 
         </article>
     </main>
+    <script> //Script para o nosso menu (1° script de todos)
+        function clickMenu() {
+            
+        }        
+    </script>
 </body>
 </html>
