começo de estilo

--- a/Desafios/d015 - login solo/index.html
+++ b/Desafios/d015 - login solo/index.html
@@ -7,18 +7,18 @@
     <title>Tela de login</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
-<body>
-    <main>
-        <div id="img">
 
-        </div>
+<body>
+    <main> <!--Caixa principal da página-->
+        <section id="img"></section>
         <h1>Login</h1>
         <p>
             Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
         </p>
-        <form action="cadastro.php" method="post">
+        <form action="cadastro.php" method="post"> <!--Formulário-->
 
         </form>
     </main>
+
 </body>
 </html>
