--- a/Desafios/d015 - login solo/index.html
+++ b/Desafios/d015 - login solo/index.html
@@ -15,8 +15,19 @@
         <p>
             Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
         </p>
-        <form action="cadastro.php" method="post"> <!--Formulário-->
-
+        <form action="cadastro.php" method="post" autocomplete="on"> <!--Formulário-->
+            <p>
+                <label for="iusu"></label>
+                <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="25" placeholder="Seu e-mail" autocomplete="email">
+            </p>
+            <p>
+                <label for="isenha"></label>
+                <input type="password" name="senha" id="isenha">
+            </p>
+            <p>
+                <input type="submit" value="Entrar"> <br>
+                <input type="reset" value="Esqueci a senha">
+            </p>
         </form>
     </main>
 
