--- a/Desafios/d015 - login solo/index.html
+++ b/Desafios/d015 - login solo/index.html
@@ -16,13 +16,13 @@
             Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
         </p>
         <form action="cadastro.php" method="post" autocomplete="on"> <!--Formulário-->
-            <p>
+            <p id="usu"> <!--Fundo do campo de email-->
                 <label for="iusu"></label>
-                <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="25" placeholder="Seu e-mail" autocomplete="email">
+                <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="26" placeholder="Seu e-mail" autocomplete="email">
             </p>
-            <p>
+            <p id="senha"> <!--Fundo do campo de senha-->
                 <label for="isenha"></label>
-                <input type="password" name="senha" id="isenha" required minlength="5" size="25" placeholder="Sua senha" autocomplete="current-password">
+                <input type="password" name="senha" id="isenha" required minlength="5" size="26" placeholder="Sua senha" autocomplete="current-password">
             </p>
             <p>
                 <input type="submit" value="Entrar" id="botent"> <br>
