--- a/Desafios/d015 - login solo/index.html
+++ b/Desafios/d015 - login solo/index.html
@@ -7,6 +7,7 @@
     <title>Tela de login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--Chamando os ícones do google-->
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 
 </head>
 
@@ -28,7 +29,7 @@
             </p>
             <p>
                 <input type="submit" value="Entrar" id="botent"> <br>
-                <input type="reset" value="Esqueci a senha" id="botsenha">
+                <input type="reset" value="Esqueci a senha &#x2709;" id="botsenha">
             </p>
         </form>
     </main>
