query para tablets

--- a/Desafios/d015-v2/index.html
+++ b/Desafios/d015-v2/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
     <main> <!--Código principal-->
         <section id="login">
             <div id="imagem">
-
+                <!--A imagem está aqui, como background-->
             </div>
+            
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
