--- a/Desafios/d015-v2/index.html
+++ b/Desafios/d015-v2/index.html
@@ -32,7 +32,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha &#x2709;</a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha &#x2709;</a>
                 </form>
             </div>
         </section>
