--- a/Projetos pessoais/005/index.html
+++ b/Projetos pessoais/005/index.html
@@ -5,21 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="shortcut icon" href="imagens/user.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/query.css">
 </head>
 <body>
-    <main>
-        <section id="caixa">
+    <main><!--Área principal do código-->
+        <section id="login">
             <div id="img">
-                <!--Conteúdo da imagem-->
+                <!--Área da imagem-->
             </div>
 
-            <div id="formulario"> <!--Texto e formulário-->
+            <div id="formulario"> <!--Área do formulário-->
                 <h1>Login</h1>
-                <p>Seja bem vindo(a) novamente. Faça o seu login aqui para poder acessar sua conta e continuar.</p>
-
-                <form action="login.php" method="post" autocomplete="on">
+                <p>Seja bem-vindo(a) novamente. Faça login aqui para poder acessar sua conta e continuar.</p>
+                <form action="login.php" method="post">
 
                 </form>
             </div>
